Update: chart related

--- a/frontend/res/styles/stock.less
+++ b/frontend/res/styles/stock.less
@@ -17,6 +17,14 @@
 
       >div:last-child {
         padding-left: 5%;
+
+        span {
+          padding: 0 10px;
+        }
+
+        span.act {
+          font-weight: bold;
+        }
       }
     }
 
