--- a/frontend/res/views/realtime.html
+++ b/frontend/res/views/realtime.html
@@ -5,99 +5,102 @@
         <div id="realtime_chart" class="col-md-8 col-lg-9 stock_chart">
         </div>
         <div id="realtime_quotes" class="col-md-4 col-lg-3">
-            <div class="name">
-                {{ quotes.name }}
-                <span class="code">({{ quotes.code }})</span>
-            </div>
-            <div class="price" v-bind:class="{ red: rate > 0, green: rate < 0 }">
-                {{ quotes.price }}
-                <span v-if="rate >= 0" class="rate">
+            <div v-if="quotes.name">
+                <div class="name">
+                    {{ quotes.name }}
+                    <span class="code">({{ quotes.code }})</span>
+                </div>
+                <div class="price" v-bind:class="{ red: rate > 0, green: rate < 0 }">
+                    {{ quotes.price }}
+                    <span v-if="rate >= 0" class="rate">
                     ▲ {{ percent(rate) }}
                 </span>
-                <span v-else class="rate">
+                    <span v-else class="rate">
                     ▼ {{ percent(rate) }}
                 </span>
+                </div>
+                <table class="table table-condensed">
+                    <tbody>
+                    <tr>
+                        <td>昨收</td>
+                        <td>{{ quotes.pre_close }}</td>
+                    </tr>
+                    <tr>
+                        <td>今开</td>
+                        <td>{{ quotes.open }}</td>
+                    </tr>
+                    <tr>
+                        <td>最高</td>
+                        <td>{{ quotes.high }}</td>
+                    </tr>
+                    <tr>
+                        <td>最低</td>
+                        <td>{{ quotes.low }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <table class="table table-condensed">
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th>价格</th>
+                        <th>成交量</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>卖五</td>
+                        <td>{{ quotes.a5_p }}</td>
+                        <td>{{ quotes.a5_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>卖四</td>
+                        <td>{{ quotes.a4_p }}</td>
+                        <td>{{ quotes.a4_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>卖三</td>
+                        <td>{{ quotes.a3_p }}</td>
+                        <td>{{ quotes.a3_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>卖二</td>
+                        <td>{{ quotes.a2_p }}</td>
+                        <td>{{ quotes.a2_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>卖一</td>
+                        <td>{{ quotes.a1_p }}</td>
+                        <td>{{ quotes.a1_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>买一</td>
+                        <td>{{ quotes.b1_p }}</td>
+                        <td>{{ quotes.b1_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>买二</td>
+                        <td>{{ quotes.b2_p }}</td>
+                        <td>{{ quotes.b2_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>买三</td>
+                        <td>{{ quotes.b3_p }}</td>
+                        <td>{{ quotes.b3_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>买四</td>
+                        <td>{{ quotes.b4_p }}</td>
+                        <td>{{ quotes.b4_v }}</td>
+                    </tr>
+                    <tr>
+                        <td>买五</td>
+                        <td>{{ quotes.b5_p }}</td>
+                        <td>{{ quotes.b5_v }}</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
-            <table class="table table-condensed">
-                <tbody>
-                <tr>
-                    <td>昨收</td>
-                    <td>{{ quotes.pre_close }}</td>
-                </tr>
-                <tr>
-                    <td>今开</td>
-                    <td>{{ quotes.open }}</td>
-                </tr>
-                <tr>
-                    <td>最高</td>
-                    <td>{{ quotes.high }}</td>
-                </tr>
-                <tr>
-                    <td>最低</td>
-                    <td>{{ quotes.low }}</td>
-                </tr>
-                </tbody>
-            </table>
-            <table class="table table-condensed">
-                <thead>
-                <tr>
-                    <th></th>
-                    <th>价格</th>
-                    <th>成交量</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>卖五</td>
-                    <td>{{ quotes.a5_p }}</td>
-                    <td>{{ quotes.a5_v }}</td>
-                </tr>
-                <tr>
-                    <td>卖四</td>
-                    <td>{{ quotes.a4_p }}</td>
-                    <td>{{ quotes.a4_v }}</td>
-                </tr>
-                <tr>
-                    <td>卖三</td>
-                    <td>{{ quotes.a3_p }}</td>
-                    <td>{{ quotes.a3_v }}</td>
-                </tr><tr>
-                    <td>卖二</td>
-                    <td>{{ quotes.a2_p }}</td>
-                    <td>{{ quotes.a2_v }}</td>
-                </tr>
-                <tr>
-                    <td>卖一</td>
-                    <td>{{ quotes.a1_p }}</td>
-                    <td>{{ quotes.a1_v }}</td>
-                </tr>
-                <tr>
-                    <td>买一</td>
-                    <td>{{ quotes.b1_p }}</td>
-                    <td>{{ quotes.b1_v }}</td>
-                </tr>
-                <tr>
-                    <td>买二</td>
-                    <td>{{ quotes.b2_p }}</td>
-                    <td>{{ quotes.b2_v }}</td>
-                </tr>
-                <tr>
-                    <td>买三</td>
-                    <td>{{ quotes.b3_p }}</td>
-                    <td>{{ quotes.b3_v }}</td>
-                </tr>
-                <tr>
-                    <td>买四</td>
-                    <td>{{ quotes.b4_p }}</td>
-                    <td>{{ quotes.b4_v }}</td>
-                </tr>
-                <tr>
-                    <td>买五</td>
-                    <td>{{ quotes.b5_p }}</td>
-                    <td>{{ quotes.b5_v }}</td>
-                </tr>
-                </tbody>
-            </table>
         </div>
     </div>
 </div>
@@ -211,6 +214,7 @@
                 ]
             });
             chart.hideLoading();
+            chart.resize();
         };
     }, 0);
 </script>
