--- a/frontend/res/views/login.html
+++ b/frontend/res/views/login.html
@@ -21,14 +21,14 @@
 
 <div id="society-login">
 
-    <title>登陆</title>
+    <title>登录</title>
 
     <body>
-    <h1>登陆页面：</h1>
+    <h1>登录页面：</h1>
     <form>
         用户名<input type="text" id="username" name="username" maxlength="20"/>
         密码<input type="password" id="password" name="password" maxlength="18"/>
-        <input id="loginBtn" type="button" value="登陆"/>
+        <input id="loginBtn" type="button" value="登录"/>
     </form>
     <br>
     <button onclick="app.views.load('regist');">注册</button>
