--- a/frontend/res/views/regist.html
+++ b/frontend/res/views/regist.html
@@ -114,6 +114,6 @@
     <br>
     <p id="registFail"></p>
     <br>
-    <button onclick="app.views.load('login');">登陆</button>
+    <button onclick="app.views.load('login');">登录</button>
     </body>
 </dev>
