--- a/frontend/res/views/logout.html
+++ b/frontend/res/views/logout.html
@@ -1,8 +1,28 @@
+<script>
+    $(document).ready(function () {
+        var LOGOUT_MESSAGE = "Logout Successful!";
+        app.views.searchBoxFocus(true);
+        $("#yesBtn").click(function () {
+            Cookies.set('username', '', {expires: -1});
+            Cookies.set('nickname', '', {expires: -1});
+            $('#alertText').html(LOGOUT_MESSAGE);
+            $('#confirmLogout').hide();
+            $('#logIcon').html("登录").attr('data-view', 'login');
+        });
+        $("#noBtn").click(function () {
+            app.views.load('home');
+        })
+    });
+</script>
+
 <div id="society-logout">
     <body>
-        <h1>{{ nickname }} logouted! </h1>
+        <h1 id="alertText"> Want to logout? </h1>
         <br>
-        <button onclick="app.views.load('login');">登陆</button>
+        <div id="confirmLogout">
+            <button id="yesBtn" >Yes</button>
+            <button id="noBtn" >No</button>
+        </div>
     </body>
 </div>
 
