--- a/frontend/res/views/login.html
+++ b/frontend/res/views/login.html
@@ -1,6 +1,6 @@
 <script>
     $(document).ready(function () {
-        app.views.searchBoxFocus(false);
+        //app.views.searchBoxFocus(false);
         $("#loginBtn").click(function () {
             var username = $("#username").val();
             var password = sha256($("#password").val());
