--- a/frontend/res/styles/stockpool.css
+++ b/frontend/res/styles/stockpool.css
@@ -1,36 +1,22 @@
-*{
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
+#view_stockpool {
+  height: 100%;
 }
-/* 两列右侧自适应布局 */
-.left-fixed_right-auto{
-    width: 100%;
-    height: 1000px;
-    clear: both;
-    display: inline-block;
-    margin-top: 20px;
+#view_stockpool .row {
+  height: 100%;
 }
-.left{
-    position:relative;
-    float:left;
-    width:200px;
-    height: 100%;
-    margin-right:-200px;
-    background: whitesmoke;
+#view_stockpool .left {
+  background-color: #eaf1fa;
+  height: 100%;
+  padding: 0;
 }
-.right{
-
-    width:100%;
-    height: 100%;
-
-
+#view_stockpool .left h4 {
+  padding-left: 20px;
 }
-.right-content{
-    margin-left:200px;
-    height: 100%;
+#view_stockpool .left .list > div {
+  height: 30px;
+  line-height: 30px;
+  padding-left: 30px;
 }
-
-
+#view_stockpool .left .list > div.act {
+  background-color: white;
+}
