--- a/frontend/res/views/strategy.html
+++ b/frontend/res/views/strategy.html
@@ -1,26 +1,21 @@
 <link rel="stylesheet" href="res/styles/strategy.css">
 
 <div id="view_strategy" class="container-fluid">
-    <body>
-
-    <div class="left-fixed_right-auto">
-        <div class="left">
-            <li><a href="javascript:" v-bind:class="{ act: selected == 'strategy1' }" v-on:click="navClick"
-                   data-view="strategy1">
-                策略1
-            </a></li>
-            <li><a href="javascript:" v-bind:class="{ act: selected == 'strategy2' }" v-on:click="navClick"
-                   data-view="strategy1">
-                策略2
-            </a></li>
-            <li><a href="javascript:" v-bind:class="{ act: selected == 'strategy3' }" v-on:click="navClick"
-                   data-view="strategy1">
-                策略3
-            </a></li>
-
+    <div class="row">
+        <div class="col-md-2 left">
+            <div class="list">
+                <div>
+                    <i class="mdi mdi-file-document"></i>
+                    策略1
+                </div>
+                <div class="act">
+                    <i class="mdi mdi-file-document"></i>
+                    策略2
+                </div>
+            </div>
         </div>
-        <div class="right">
-            <div class="right-content">
+        <div class="col-md-10 right">
+            <div class = "buttons">
                 <button type="button" class="btn btn-primary" onclick="">
                     新建
                 </button>
@@ -33,12 +28,8 @@
                 <button type="button" class="btn btn-primary" onclick="">
                     删除
                 </button>
-
-
-
             </div>
         </div>
     </div>
-    </body>
 </div>
 
